k8s/observability-configs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "grafana.local.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: observability-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "prometheus.local.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: observability-kube-prometh-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "alertmanager.local.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: observability-kube-prometh-alertmanager
          port: 9093
